<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.sch.smktelkom_mlg.project2.xirpl303131527.mynote.RegisterActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewRegTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:padding="4dp"
        android:text="@string/reg_title"
        android:textAlignment="center"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextRegUsername"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="11dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextRegEmail"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="11dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextRegPassword"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="11dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="7dp"
        android:text="@string/reg_title" />

    <TextView
        android:id="@+id/textViewGoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/already_have"
        android:textAlignment="center" />

</LinearLayout>
